--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
 
   <header class="sticky-header">
 
-    <!-- <nav class="navbar fixed-top"> -->
     <nav class="navbar fixed-top">
       <div class="container-fluid">
-        <a class="screen-reader-text" href="#shop"> Skip to shopping </a>
+        <!-- <a class="screen-reader-text" href="#shop"> Skip to shopping </a> -->
 
         <div class="logo">
           <img src="images/logo/logo_white_large.png">
-          <a class="navbar-brand" href="#"></a>
+          <!-- <a class="navbar-brand" href="#"></a> -->
         </div>
 
         <div class="menu-cart">
@@ -510,43 +509,43 @@
       </div>
 
       <div class="shop" id="shop" tabindex="-1">
-        <div class="men-category">
+        <div class="asia-category">
           <img src="./images/tokyo2.jpg">
           <div class="cat">
             <p>Asia</p>
           </div>
         </div>
 
-        <div class="trends-category">
+        <div class="africa-category">
           <img src="./images/africa2.jpg">
-          <div class="cat">
+          <div class="cat"> 
             <p>Africa</p>
           </div>
 
         </div>
 
-        <div class="glasses-category">
+        <div class="europe-category">
           <img src="./images/europe.jpg">
           <div class="cat">
             <p>europe</p>
           </div>
         </div>
 
-        <div class="sales-category">
+        <div class="northamerica-category">
           <img src="./images/northamerica.jpg">
           <div class="cat">
             <p>north america</p>
           </div>
         </div>
 
-        <div class="bags-category">
+        <div class="southamerica-category">
           <img src="./images/southamerica.jpg">
           <div class="cat">
             <p>central & south america</p>
           </div>
         </div>
 
-        <div class="womens-category">
+        <div class="oz-category">
           <img src="./images/oz.jpg">
           <div class="cat">
             <p>australia & new zealand</p>
